# ltb-geom

./: CMakeLists.txt  README.md
apps/: CMakeLists.cmake
apps/meshes/: main.cpp
include/ltb/geom/: fwd.hpp  interpolator_3d.hpp  mesh.hpp  range.hpp  vec.hpp
include/ltb/geom/shapes/: capsule.hpp  fwd.hpp  io.hpp  polygon.hpp  shape_info.hpp
include/ltb/geom/shapes/meshes/: cube_mesh.hpp
src/: fwd.cpp  interpolator.cpp  interpolator_2d.cpp  transform.cpp
src/ltb/geom/: comparison_utils.cpp  comparison_utils.hpp  interpolator.hpp  interpolator_2d.hpp  interpolator_3d.cpp  mesh.cpp  range.cpp  ray.cpp  ray.hpp  solvers.cpp  solvers.hpp  transform.cpp  transform.hpp  vec.cpp
src/ltb/geom/shapes/: ball.cpp  ball.hpp  box.cpp  box.hpp  capsule.cpp  fwd.cpp  io.cpp  shape_info.cpp
src/ltb/geom/shapes/meshes/: axes_mesh.hpp  disc_mesh.hpp  icosphere_mesh.cpp  icosphere_mesh.hpp  plane_mesh.hpp
src/shapes/: polygon.cpp
src/shapes/meshes/: axes_mesh.cpp  cube_mesh.cpp  disc_mesh.cpp  plane_mesh.cpp
